--- a/index.html
+++ b/index.html
@@ -5,9 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Team Page</title>
+    <!-- font -->
+    <link href='https://fonts.googleapis.com/css?family=Press Start 2P' rel='stylesheet'>
+    <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@500&display=swap" rel="stylesheet">
     <!-- linking css -->
     <link rel="stylesheet" href="./style.css" />
-<!-- bootstrap -->
+    <!-- bootstrap -->
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css"
@@ -31,14 +34,14 @@
       <div class="flex-item-1">
         <h1>
           <ul class="our-team">
-            <li>O</li>
-            <li>U</li>
-            <li>R</li>
-            <li>&nbsp;</li>
-            <li>T</li>
-            <li>E</li>
-            <li>A</li>
-            <li>M</li>
+            <li class="wavy-font">O</li>
+            <li class="wavy-font">U</li>
+            <li class="wavy-font">R</li>
+            <li><br></li>
+            <li class="minecraft-font">T</li>
+            <li class="minecraft-font">E</li>
+            <li class="minecraft-font">A</li>
+            <li class="minecraft-font">M</li>
           </ul>
         </h1>
       </div>
@@ -57,7 +60,8 @@
         <li></li>
       </ul>
     </div>
-    <div class="teams-container" id="teams" style="background-color: rgb(16, 16, 16)">
+    <!-- <canvas id=a  style=background:#fff></canvas> -->
+    <div class="teams-container" id="teams">
       <div class="grid-items team">
         <!-- Website Team -->
         
@@ -66,7 +70,7 @@
         <div
           class="card-team card-section-webd container-fluid d-flex flex-wrap justify-content-around"
         >
-          <div class="card m-3" data-aos="fade-up" style="width: 18rem">
+          <div class="card m-3 " data-aos="fade-up" style=" width: 15rem;height:21rem;">
             <img
               class="card-img-top"
               data-aos="fade-up"
@@ -75,12 +79,12 @@
               alt="Card image cap"
             />
             <div class="card-body" data-aos="fade-up">
-              <h5 class="card-title text-center" >
+              <h5 class="card-title text-center minecraft-font" >
                 Card title
               </h5>
             </div>
           </div>
-          <div class="card m-3" data-aos="fade-up" style="width: 18rem">
+          <div class="card m-3" data-aos="fade-up" style="width: 15rem;height:21rem">
             <img
               class="card-img-top"
               data-aos="fade-up"
@@ -89,12 +93,12 @@
               alt="Card image cap"
             />
             <div class="card-body" data-aos="fade-up">
-              <h5 class="card-title text-center">
+              <h5 class="card-title text-center minecraft-font">
                 Card title
               </h5>
             </div>
           </div>
-          <div class="card m-3" data-aos="fade-up" style="width: 18rem">
+          <div class="card m-3" data-aos="fade-up" style="width: 15rem;height:21rem">
             <img
               class="card-img-top"
               data-aos="fade-up"
@@ -103,7 +107,7 @@
               alt="Card image cap"
             />
             <div class="card-body" data-aos="fade-up">
-              <h5 class="card-title text-center">
+              <h5 class="card-title text-center minecraft-font">
                 Card title
               </h5>
             </div>
@@ -118,7 +122,7 @@
           <div
             class="card m-3 gradient-border"
             data-aos="fade-right"
-            style="width: 18rem"
+            style="width: 15rem;height:21rem"
           >
             <img
               class="card-img-top"
@@ -128,13 +132,13 @@
               alt="Card image cap"
             />
             <div class="card-body" data-aos="fade-right">
-              <h5 class="card-title text-center">Card title</h5>
+              <h5 class="card-title text-center minecraft-font">Card title</h5>
             </div>
           </div>
           <div
-            class="card m-3 neon-animation-1"
+            class="card m-3 "
             data-aos="zoom-in-up"
-            style="width: 18rem"
+            style="width: 15rem;height:21rem"
           >
             <img
               class="card-img-top"
@@ -144,13 +148,13 @@
               alt="Card image cap"
             />
             <div class="card-body" data-aos="zoom-in-up">
-              <h5 class="card-title text-center">Card title</h5>
+              <h5 class="card-title text-center minecraft-font">Card title</h5>
             </div>
           </div>
           <div
-            class="card m-3 spiral-border neon-animation-2"
+            class="card m-3 spiral-border  "
             data-aos="fade-left"
-            style="width: 18rem"
+            style="width: 15rem;height:21rem"
           >
             <img
               class="card-img-top"
@@ -161,7 +165,7 @@
               alt="Card image cap"
             />
             <div class="card-body" data-aos="fade-left">
-              <h5 class="card-title text-center">Card title</h5>
+              <h5 class="card-title text-center minecraft-font">Card title</h5>
             </div>
           </div>
         </div>
@@ -174,7 +178,7 @@
           <div
             class="card m-3 gradient-border"
             data-aos="flip-right"
-            style="width: 18rem"
+            style="width: 15rem;height:21rem"
           >
             <img
               class="card-img-top"
@@ -183,13 +187,13 @@
               alt="Card image cap"
             />
             <div class="card-body" data-aos="flip-left">
-              <h5 class="card-title text-center">Card title</h5>
+              <h5 class="card-title text-center minecraft-font">Card title</h5>
             </div>
           </div>
           <div
-            class="card m-3 spiral-border neon-animation-2"
+            class="card m-3 spiral-border  "
             data-aos="flip-left"
-            style="width: 18rem"
+            style="width: 15rem;height:21rem"
           >
             <img
               class="card-img-top"
@@ -198,7 +202,7 @@
               alt="Card image cap"
             />
             <div class="card-body" data-aos="flip-right">
-              <h5 class="card-title text-center">Card title</h5>
+              <h5 class="card-title text-center minecraft-font">Card title</h5>
             </div>
           </div>
         </div>
@@ -211,7 +215,7 @@
           <div
             class="card m-3 gradient-border"
             data-aos="zoom-in"
-            style="width: 18rem"
+            style="width: 15rem;height:21rem"
           >
             <img
               class="card-img-top"
@@ -221,13 +225,13 @@
               alt="Card image cap"
             />
             <div class="card-body" data-aos="zoom-in">
-              <h5 class="card-title text-center">Card title</h5>
+              <h5 class="card-title text-center minecraft-font">Card title</h5>
             </div>
           </div>
           <div
-            class="card m-3 neon-animation-2"
+            class="card m-3  "
             data-aos="zoom-in"
-            style="width: 18rem"
+            style="width: 15rem;height:21rem"
           >
             <img
               class="card-img-top"
@@ -237,7 +241,7 @@
               alt="Card image cap"
             />
             <div class="card-body" data-aos="zoom-in">
-              <h5 class="card-title text-center">Card title</h5>
+              <h5 class="card-title text-center minecraft-font">Card title</h5>
             </div>
           </div>
         </div>
@@ -250,7 +254,7 @@
           <div
             class="card m-3 gradient-border"
             data-aos="zoom-in-up"
-            style="width: 18rem"
+            style="width: 15rem;height:21rem"
           >
             <img
               class="card-img-top"
@@ -260,13 +264,13 @@
               alt="Card image cap"
             />
             <div class="card-body" data-aos="zoom-in-up">
-              <h5 class="card-title text-center">Card title</h5>
+              <h5 class="card-title text-center minecraft-font">Card title</h5>
             </div>
           </div>
           <div
             class="card m-3 animate-border"
             data-aos="zoom-in-up"
-            style="width: 18rem"
+            style="width: 15rem;height:21rem"
           >
             <img
               class="card-img-top"
@@ -276,13 +280,13 @@
               alt="Card image cap"
             />
             <div class="card-body" data-aos="zoom-in-up">
-              <h5 class="card-title text-center">Card title</h5>
+              <h5 class="card-title text-center minecraft-font">Card title</h5>
             </div>
           </div>
           <div
-            class="card m-3 neon-animation-1"
+            class="card m-3 "
             data-aos="zoom-in-up"
-            style="width: 18rem"
+            style="width: 15rem;height:21rem"
           >
             <img
               class="card-img-top"
@@ -292,13 +296,13 @@
               alt="Card image cap"
             />
             <div class="card-body" data-aos="zoom-in-up">
-              <h5 class="card-title text-center">Card title</h5>
+              <h5 class="card-title text-center minecraft-font">Card title</h5>
             </div>
           </div>
           <div
-            class="card m-3 neon-animation-2"
+            class="card m-3  "
             data-aos="zoom-in-up"
-            style="width: 18rem"
+            style="width: 15rem;height:21rem"
           >
             <img
               class="card-img-top"
@@ -308,7 +312,7 @@
               alt="Card image cap"
             />
             <div class="card-body" data-aos="zoom-in-up">
-              <h5 class="card-title text-center">Card title</h5>
+              <h5 class="card-title text-center minecraft-font">Card title</h5>
             </div>
           </div>
         </div>
@@ -321,7 +325,7 @@
           <div
             class="card m-3 gradient-border"
             data-aos="zoom-in-right"
-            style="width: 18rem"
+            style="width: 15rem;height:21rem"
           >
             <img
               class="card-img-top"
@@ -331,13 +335,13 @@
               alt="Card image cap"
             />
             <div class="card-body" data-aos="zoom-in-right">
-              <h5 class="card-title text-center">Card title</h5>
+              <h5 class="card-title text-center minecraft-font">Card title</h5>
             </div>
           </div>
           <div
-            class="card m-3 spiral-border neon-animation-1"
+            class="card m-3 spiral-border "
             data-aos="zoom-in-up"
-            style="width: 18rem"
+            style="width: 15rem;height:21rem"
           >
             <img
               class="card-img-top"
@@ -347,13 +351,13 @@
               alt="Card image cap"
             />
             <div class="card-body" data-aos="zoom-in-up">
-              <h5 class="card-title text-center">Card title</h5>
+              <h5 class="card-title text-center minecraft-font">Card title</h5>
             </div>
           </div>
           <div
-            class="card m-3 neon-animation-2"
+            class="card m-3  "
             data-aos="zoom-in-left"
-            style="width: 18rem"
+            style="width: 15rem;height:21rem"
           >
             <img
               class="card-img-top"
@@ -363,7 +367,7 @@
               alt="Card image cap"
             />
             <div class="card-body" data-aos="zoom-in-left">
-              <h5 class="card-title text-center">Card title</h5>
+              <h5 class="card-title text-center minecraft-font">Card title</h5>
             </div>
           </div>
         </div>
@@ -376,7 +380,7 @@
           <div
             class="card m-3 gradient-border"
             data-aos="zoom-out"
-            style="width: 18rem"
+            style="width: 15rem;height:21rem"
           >
             <img
               class="card-img-top"
@@ -386,13 +390,13 @@
               alt="Card image cap"
             />
             <div class="card-body" data-aos="zoom-out">
-              <h5 class="card-title text-center">Card title</h5>
+              <h5 class="card-title text-center minecraft-font">Card title</h5>
             </div>
           </div>
           <div
-            class="card m-3 spiral-border neon-animation-1"
+            class="card m-3 spiral-border "
             data-aos="zoom-out"
-            style="width: 18rem"
+            style="width: 15rem;height:21rem"
           >
             <img
               class="card-img-top"
@@ -402,13 +406,13 @@
               alt="Card image cap"
             />
             <div class="card-body" data-aos="zoom-out">
-              <h5 class="card-title text-center">Card title</h5>
+              <h5 class="card-title text-center minecraft-font">Card title</h5>
             </div>
           </div>
           <div
-            class="card m-3 neon-animation-2"
+            class="card m-3  "
             data-aos="zoom-out"
-            style="width: 18rem"
+            style="width: 15rem;height:21rem"
           >
             <img
               class="card-img-top"
@@ -418,7 +422,7 @@
               alt="Card image cap"
             />
             <div class="card-body" data-aos="zoom-out">
-              <h5 class="card-title text-center">Card title</h5>
+              <h5 class="card-title text-center minecraft-font">Card title</h5>
             </div>
           </div>
         </div>
@@ -431,7 +435,7 @@
           <div
             class="card m-3 gradient-border"
             data-aos="zoom-out-up"
-            style="width: 18rem"
+            style="width: 15rem;height:21rem"
           >
             <img
               class="card-img-top"
@@ -441,15 +445,14 @@
               alt="Card image cap"
             />
             <div class="card-body" data-aos="zoom-out-up">
-              <h5 class="card-title text-center">Card title</h5>
+              <h5 class="card-title text-center minecraft-font">Card title</h5>
             </div>
           </div>
           <div
-            class="card m-3 spiral-border animate-border neon-animation-2"
+            class="card m-3 spiral-border animate-border  "
             data-aos="zoom-out-up"
-            style="width: 18rem"
+            style="width: 15rem;height:21rem"
           >
-            <!--One way of hover and border(animate-border: for border, neon-animation-2: for hover effect)-->
             <img
               class="card-img-top"
               data-aos="zoom-out-up"
@@ -458,13 +461,13 @@
               alt="Card image cap"
             />
             <div class="card-body" data-aos="zoom-out-up">
-              <h5 class="card-title text-center">Card title</h5>
+              <h5 class="card-title text-center minecraft-font">Card title</h5>
             </div>
           </div>
           <div
-            class="card m-3 neon-animation-2"
+            class="card m-3  "
             data-aos="zoom-out-up"
-            style="width: 18rem"
+            style="width: 15rem;height:21rem"
           >
             <img
               class="card-img-top"
@@ -474,7 +477,7 @@
               alt="Card image cap"
             />
             <div class="card-body" data-aos="zoom-out-up">
-              <h5 class="card-title text-center">Card title</h5>
+              <h5 class="card-title text-center minecraft-font">Card title</h5>
             </div>
           </div>
         </div>
@@ -487,7 +490,7 @@
           <div
             class="card m-3 gradient-border"
             data-aos="zoom-out-down"
-            style="width: 18rem"
+            style="width: 15rem;height:21rem"
           >
             <img
               class="card-img-top"
@@ -497,13 +500,13 @@
               alt="Card image cap"
             />
             <div class="card-body" data-aos="zoom-out-down">
-              <h5 class="card-title text-center">Card title</h5>
+              <h5 class="card-title text-center minecraft-font">Card title</h5>
             </div>
           </div>
           <div
             class="card m-3 spiral-border animate-border"
             data-aos="zoom-out-down"
-            style="width: 18rem"
+            style="width: 15rem;height:21rem"
           >
             <img
               class="card-img-top"
@@ -513,13 +516,13 @@
               alt="Card image cap"
             />
             <div class="card-body" data-aos="zoom-out-down">
-              <h5 class="card-title text-center">Card title</h5>
+              <h5 class="card-title text-center minecraft-font">Card title</h5>
             </div>
           </div>
           <div
             class="card m-3 animate-border"
             data-aos="zoom-out-down"
-            style="width: 18rem"
+            style="width: 15rem;height:21rem"
           >
             <img
               class="card-img-top"
@@ -529,7 +532,7 @@
               alt="Card image cap"
             />
             <div class="card-body" data-aos="zoom-out-down">
-              <h5 class="card-title text-center">Card title</h5>
+              <h5 class="card-title text-center minecraft-font">Card title</h5>
             </div>
           </div>
         </div>
